Started instantiation of function.h file.

--- a/project1/makefile
+++ b/project1/makefile
@@ -2,8 +2,10 @@ functions: functions.o
 		gcc functions.o -o functions
 functions.o: functions.c
 
-test: test1 test2
+test: test1 test2 test3
 test1:
 	./functions e
 test2:
 	./functions d
+test3:
+	./functions f
